# anyio-http

./: .pre-commit-config.yaml  README.rst  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: test.yml
docs/: api.rst  conf.py  contributing.rst  index.rst  support.rst
src/anyio_http/: __init__.py  _asgi.py  _auth.py  _client.py  _cookies.py  _decoders.py  _exceptions.py  _http11.py  _http2.py  _response.py  _websocket.py  _wrappers.py
src/fetchling/: __init__.py  _client.py  _connection.py  _decoders.py  _exceptions.py  _response.py  _sse.py  _streams.py  _wrappers.py
tests/: conftest.py  test_client.py
